--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,5 @@
 group 'com.flutter_webview_plugin'
 version '1.0-SNAPSHOT'
-
 buildscript {
     repositories {
         google()
@@ -11,15 +10,12 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
     }
 }
-
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 27
 
@@ -32,4 +28,8 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+}
+
+dependencies {
+    implementation files('src/main/jniLibs/tbs_sdk_thirdapp_v3.2.0.1104_43200_sharewithdownload_withfilereader_withoutGame_obfs_20170609_115346.jar')
 }
